# video-alert-system

./: .gitignore  CAMERA.md  DOCKER.md  GUIDE.md  README.md  docker-compose.yml
backend/: .env  Dockerfile  env.example  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/middlewares/: authMiddleware.ts
backend/src/routes/: auth.ts  cameras.ts
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  app.txt
frontend/src/components/: AddCameraForm.tsx  CameraCard.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AlertsPage.tsx  DashboardPage.tsx  LoginPage.tsx  RegistrationPage.tsx
frontend/src/services/: auth.ts  cameras.ts
worker/: .env  Dockerfile  main.py  pyproject.toml
