[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "fastapi[standard]>=0.117.1",
    "mediapipe>=0.10.14",
    "opencv-python>=4.12.0.88",
    "pycryptodome>=3.23.0",
    "uvicorn>=0.37.0",
]
